ability generation and structure change

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "tstl -p src/vscripts/tsconfig.json",
     "watch": "tstl -p src/vscripts/tsconfig.json --watch",
-    "buildSound": "node gen_soundevents.js"
+    "buildSound": "node scripts/gen_soundevents.js",
+    "generateAbility": "node scripts/generateAbility.js"
   },
   "repository": {
     "type": "git",
