--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/enchantinggg4/naruto-custom-game#readme",
   "dependencies": {
+    "jimp": "^0.6.0",
     "typescript-to-lua": "^0.14.1"
   }
 }
