--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "watch": "tstl -p src/vscripts/tsconfig.json --watch",
     "watchUI": "tsc -p src/custom_game/tsconfig.json --watch",
     "buildSound": "node scripts/gen_soundevents.js",
-    "generateAbility": "node scripts/generateAbility.js"
+    "generateAbility": "node scripts/generateAbility.js",
+    "tooltip": "node scripts/generateTooltips.js"
   },
   "repository": {
     "type": "git",
